# Ultimate-Scrapping-Agent

./: .gitignore  pyproject.toml
API Integrator/: .gitignore  pyproject.toml
API Integrator/config/: default_apis.yaml  example_pipeline.yaml
API Integrator/src/api_integrator/: agent.py  cli.py  state.py  system_prompt.py
API Integrator/src/api_integrator/registry/: api_registry.py  model_registry.py
API Integrator/src/api_integrator/tools/: call_api.py  chain_pipeline.py  list_apis.py  manage_results.py  register_api.py  run_model.py  search_models.py
Data Scientist Agent/: .gitignore  pyproject.toml
Data Scientist Agent/src/data_scientist/: agent.py  cli.py  state.py  system_prompt.py
Data Scientist Agent/src/data_scientist/tools/: clean_data.py  engineer_features.py  evaluate_model.py  inspect_data.py  load_data.py  report.py  train_model.py  visualize.py
DevOps-Agent/: .gitignore  pyproject.toml
DevOps-Agent/src/devops_agent/: agent.py  cli.py  state.py  system_prompt.py
DevOps-Agent/src/devops_agent/analyzers/: project_scanner.py  security_scanner.py
DevOps-Agent/src/devops_agent/tools/: analyze_project.py  check_health.py  generate_ci_cd.py  generate_deploy_script.py  generate_dockerfile.py  generate_infrastructure.py  generate_report.py  security_scan.py
Github-Guru/: .gitignore  README.md  pyproject.toml
Github-Guru/config/: github_guru.yaml
Github-Guru/docs/: api.md  architecture.md  files.md  overview.md
Github-Guru/src/github_guru/: __init__.py  agent.py  cli.py  state.py  system_prompt.py
Github-Guru/src/github_guru/analysis/: __init__.py  ast_parser.py  chunker.py  dependency_graph.py  embeddings.py  ingestion.py
Github-Guru/src/github_guru/docs/: generator.py
Github-Guru/src/github_guru/github/: client.py
Github-Guru/src/github_guru/models/: __init__.py  cache.py  codebase.py  graph.py
Github-Guru/src/github_guru/tools/: __init__.py  get_git_info.py  list_files.py  query_graph.py  query_structure.py  read_file.py  search_code.py  semantic_search.py
Knowledge-Connector-Agent/: .gitignore  pyproject.toml
Knowledge-Connector-Agent/src/knowledge_connector/: agent.py  cli.py  state.py  system_prompt.py
Knowledge-Connector-Agent/src/knowledge_connector/indexing/: chunker.py  embeddings.py  knowledge_graph.py  scanner.py
Knowledge-Connector-Agent/src/knowledge_connector/tools/: check_consistency.py  find_links.py  get_context.py  list_docs.py  query_graph.py  scan_docs.py  search.py  suggest_updates.py
Orchestrator-Agent/: .gitignore  pyproject.toml
Orchestrator-Agent/src/orchestrator_agent/: agent.py  cli.py  state.py  system_prompt.py
Orchestrator-Agent/src/orchestrator_agent/analyzers/: code_reviewer.py  project_planner.py
Orchestrator-Agent/src/orchestrator_agent/tools/: execute_command.py  generate_deployment.py  generate_docs.py  plan_project.py  review_code.py  run_tests.py  scaffold_project.py  write_file.py
Red-Team-Agent/: .gitignore  pyproject.toml
Red-Team-Agent/src/redteam_agent/: agent.py  cli.py  state.py  system_prompt.py
Red-Team-Agent/src/redteam_agent/analyzers/: payload_generator.py  vulnerability_scanner.py
Red-Team-Agent/src/redteam_agent/tools/: check_defenses.py  fuzz_inputs.py  generate_payloads.py  generate_report.py  prompt_injection.py  scan_target.py  security_audit.py  test_auth.py
Self-Improving-Agent/: .gitignore  pyproject.toml
Self-Improving-Agent/src/evolver_agent/: agent.py  cli.py  state.py  system_prompt.py
Self-Improving-Agent/src/evolver_agent/analyzers/: evaluator.py  prompt_evolver.py
Self-Improving-Agent/src/evolver_agent/tools/: analyze_agent.py  apply_improvement.py  evaluate_prompt.py  generate_report.py  generate_variant.py  rollback.py  run_experiment.py  track_metrics.py
Testing-Agent/: .gitignore  pyproject.toml
Testing-Agent/src/testing_agent/: agent.py  cli.py  state.py  system_prompt.py
Testing-Agent/src/testing_agent/analyzers/: code_parser.py  test_runner.py
Testing-Agent/src/testing_agent/tools/: analyze_codebase.py  apply_fix.py  check_coverage.py  debug_failure.py  generate_tests.py  profile_performance.py  read_source.py  run_tests.py
UI-Agent/: pyproject.toml
UI-Agent/src/ui_agent/: agent.py  cli.py  state.py  system_prompt.py
UI-Agent/src/ui_agent/analyzers/: design_scanner.py
UI-Agent/src/ui_agent/tools/: export_code.py  generate_component.py  generate_page.py  generate_style_guide.py  generate_ui_spec.py  read_file.py  read_image.py  refine_design.py
Ultimate-Scrapping-Agent/: .env.example  LICENSE  README.md
Ultimate-Scrapping-Agent/agents/: __init__.py
Ultimate-Scrapping-Agent/agents/web_scraper/api/: dependencies.py  schemas.py
Ultimate-Scrapping-Agent/agents/web_scraper/parsing/: __init__.py  html_cleaner.py
Ultimate-Scrapping-Agent/agents/web_scraper/persistence/: __init__.py  repository.py
Ultimate-Scrapping-Agent/agents/web_scraper/scraping/: anti_detect.py  browser_client.py  tiers.py  user_agents.py
Ultimate-Scrapping-Agent/agents/web_scraper/tools/: fetch_url.py  parse_html.py
Ultimate-Scrapping-Agent/common/: rate_limiter.py
Ultimate-Scrapping-Agent/common/api/: app_factory.py
Ultimate-Scrapping-Agent/common/persistence/: __init__.py
Ultimate-Scrapping-Agent/config/: scraper_agent.yaml
Ultimate-Scrapping-Agent/tests/agents/web_scraper/: test_http_client.py  test_tiers.py
agents/web_scraper/: __init__.py  agent.py  main.py
agents/web_scraper/api/: __init__.py  router.py
agents/web_scraper/persistence/: models.py
agents/web_scraper/scraping/: __init__.py  http_client.py  proxy_pool.py
agents/web_scraper/tools/: __init__.py  escalate_tier.py  extract_data.py
common/: agent_base.py  config_loader.py  retry.py
common/api/: __init__.py
common/persistence/: database.py  models.py
tests/agents/web_scraper/: conftest.py  test_tools.py
