[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-scientist-agent"
version = "0.1.0"
description = "AI-powered data science agent with automated EDA, model selection, and reporting via Claude Agent SDK"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
data-scientist = "data_scientist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_scientist"]
