[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-connector"
version = "0.1.0"
description = "AI-powered knowledge linker, consistency checker, and semantic search agent via Claude Agent SDK"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
knowledge-connector = "knowledge_connector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_connector"]
