[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-agent"
version = "0.1.0"
description = "AI-powered Full-Stack Orchestrator Agent — end-to-end project generation, code review, testing, docs, and deployment."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
orchestrator-agent = "orchestrator_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_agent"]
