[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redteam-agent"
version = "0.1.0"
description = "AI-powered Adversarial Red-Team Agent — ethical security testing, prompt injection detection, and vulnerability assessment."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
redteam-agent = "redteam_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/redteam_agent"]
