[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolver-agent"
version = "0.1.0"
description = "AI-powered Self-Improving Recursive Agent — autonomous prompt tuning, evolutionary optimization, and performance tracking."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
evolver-agent = "evolver_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evolver_agent"]
