[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testing-agent"
version = "0.1.0"
description = "AI-powered Testing & Debugging Agent — automated QA, test generation, bug-fixing, and performance profiling."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
testing-agent = "testing_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/testing_agent"]
